removed old example and replaced with new (thought I had already :P)

--- a/lab-instructions/dodlabs.tex
+++ b/lab-instructions/dodlabs.tex
@@ -20,6 +20,8 @@
 
 \usepackage{amsmath}  % For \text{}
 \usepackage{pifont}   % Provides the star symbols
+\usepackage[swedish]{babel}
+\usepackage[autostyle, swedish=quotes]{csquotes}
 
 %---------------------------------------------------------------
 
