--- a/lab-instructions/modules/latex/latex.tex
+++ b/lab-instructions/modules/latex/latex.tex
@@ -52,8 +52,8 @@
 	\item I mappen med labbfiler som du laddade ned i labb 1 finns också en \file{latex}-katalog, som innehåller allt du behöver för att återskapa rapporten på nästa sida.
 	\item Filen \file{sort\_scala.tex} är en mall för \LaTeX-dokumentet, men utan innehåll.
     \item I filen \file{oformaterad\_text.txt} finns den råa texten utan formattering.
-	\item Starta Texmaker med kommandot \verb/texmaker & / (eller \verb/texmaker sort_scala.tex &/). \emph{Du får lov att använda en annan editor om du vill. Åven Overleaf är tillåtet.}
-	\item Kopiera in den råa texten från \file{oformaterad\_text.txt} till \file{sort\_scala.tex}. Det ska ligga mellan \verb/\begin{document}/ och \verb/\end{document}/, som markerar dokumentets början och slut.
+	\item Starta Texmaker med kommandot \verb/texmaker & / (eller \verb/texmaker sort_scala.tex &/). \emph{Du får lov att använda en annan editor om du vill. Även Overleaf är tillåtet.}
+	\item Kopiera in den råa texten från \file{oformaterad\_text.txt} till \file{sort\_scala.tex}. Den ska ligga mellan \verb/\begin{document}/ och \verb/\end{document}/, som markerar dokumentets början och slut.
 	\item Återskapa den färdiga rapporten på nästa sida. Lägg in lämpliga \LaTeX-kommandon i filen så att rapporten får (åtminstone ungefär) samma utseende. Se till att styckeindelningen och rubrikerna blir korrekta i hela dokumentet innan du ger dig på resten, till exempel de matematiska formlerna.
 
 	Arbeta stegvis: ändra lite, klicka på pilen till vänster om Quick Build så körs pdfLaTeX, titta på resultatet, ändra lite till, osv.
