add link to c3pu in lecture slides

--- a/lectures/machine-code/machine-code.tex
+++ b/lectures/machine-code/machine-code.tex
@@ -411,7 +411,9 @@
     \begin{center}
         \Huge DEMO
 
-        \halfblankline
-        \Large \texttt{c3pu} -- en enkel CPU-simulator
+        {\Large \texttt{c3pu} -- en enkel CPU-simulator}
+
+        \bigskip
+        \normalsize\url{https://github.com/lunduniversity/introprog-cpu-emulator/releases/latest}
     \end{center}
 \end{frame}
